cmake_minimum_required(VERSION 3.29)
project(codewars_solutions C)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

set(CMAKE_C_STANDARD 99)

# Will you make it?
add_executable(5861d28f124b35723e00005e 8kyu/5861d28f124b35723e00005e.c)

# Switch it Up!
add_executable(5808dcb8f0ed42ae34000031 8kyu/5808dcb8f0ed42ae34000031.c)

# Calculate average
add_executable(57a2013acf1fa5bfc4000921 8kyu/57a2013acf1fa5bfc4000921.c)

# Basic Mathematical Operations
add_executable(57356c55867b9b7a60000bd7 8kyu/57356c55867b9b7a60000bd7.c)

# Sum Arrays
add_executable(53dc54212259ed3d4f00071c 8kyu/53dc54212259ed3d4f00071c.c)

# Credit Card Mask
add_executable(5412509bd436bd33920011bc 7kyu/5412509bd436bd33920011bc.c)

# Regex validate PIN code
add_executable(55f8a9c06c018a0d6e000132 7kyu/55f8a9c06c018a0d6e000132.c)
