cmake_minimum_required(VERSION 3.29)
project(codewars_solutions C)

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_C_STANDARD 11)

# ---------------- 8 kyu ---------------- #

# Will you make it?
add_executable(5861d28f124b35723e00005e 8kyu/5861d28f124b35723e00005e.c)

# Switch it Up!
add_executable(5808dcb8f0ed42ae34000031 8kyu/5808dcb8f0ed42ae34000031.c)

# Calculate average
add_executable(57a2013acf1fa5bfc4000921 8kyu/57a2013acf1fa5bfc4000921.c)

# Basic Mathematical Operations
add_executable(57356c55867b9b7a60000bd7 8kyu/57356c55867b9b7a60000bd7.c)

# Sum Arrays
add_executable(53dc54212259ed3d4f00071c 8kyu/53dc54212259ed3d4f00071c.c)

# Function 2 - squaring an argument
add_executable(523b623152af8a30c6000027 8kyu/523b623152af8a30c6000027.c)

# Is it even?
add_executable(555a67db74814aa4ee0001b5 8kyu/555a67db74814aa4ee0001b5.c)
target_link_libraries(555a67db74814aa4ee0001b5 m)

# Keep up the hoop
add_executable(55cb632c1a5d7b3ad0000145 8kyu/55cb632c1a5d7b3ad0000145.c)

# Beginner Series #4 Cockroach
add_executable(55fab1ffda3e2e44f00000c6 8kyu/55fab1ffda3e2e44f00000c6.c)

# Get the mean of an array
add_executable(563e320cee5dddcf77000158 8kyu/563e320cee5dddcf77000158.c)

# Double Char
add_executable(56b1f01c247c01db92000076 8kyu/56b1f01c247c01db92000076.c)

# Sum without highest and lowest number
add_executable(576b93db1129fcf2200001e6 8kyu/576b93db1129fcf2200001e6.c)

# Find Maximum and Minimum Values of a List
add_executable(577a98a6ae28071780000989 8kyu/577a98a6ae28071780000989.c)

# ---------------- 7 kyu ---------------- #

# Credit Card Mask
add_executable(5412509bd436bd33920011bc 7kyu/5412509bd436bd33920011bc.c)

# Regex validate PIN code
add_executable(55f8a9c06c018a0d6e000132 7kyu/55f8a9c06c018a0d6e000132.c)

# Sum of Minimums!
add_executable(5d5ee4c35162d9001af7d699 7kyu/5d5ee4c35162d9001af7d699.c)

# Check the exam
add_executable(5a3dd29055519e23ec000074 7kyu/5a3dd29055519e23ec000074.c)

# Small enough? - Beginner
add_executable(57cc981a58da9e302a000214 7kyu/57cc981a58da9e302a000214.c)
